--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,22 +1,27 @@
-name: Deploy to GitHub Pages
+name: Build and Deploy Portfolio
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, master ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, master ]
+  workflow_dispatch: # Allow manual triggers
 
 permissions:
   contents: read
   pages: write
   id-token: write
 
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout
+    - name: Checkout repository
       uses: actions/checkout@v4
       
     - name: Setup Node.js
@@ -28,9 +33,21 @@ jobs:
     - name: Install dependencies
       run: npm ci
       
-    - name: Build
+    - name: Run tests (if available)
+      run: npm test --if-present
+      
+    - name: Build application
       run: npm run build
       
+    - name: Verify build output
+      run: |
+        if [ ! -f "build/index.html" ]; then
+          echo "❌ Build failed: index.html not found"
+          exit 1
+        fi
+        echo "✅ Build successful"
+        ls -la build/
+        
     - name: Setup Pages
       uses: actions/configure-pages@v4
       
@@ -39,6 +56,20 @@ jobs:
       with:
         path: './build'
         
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
+    
+    steps:
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v4
+      
+    - name: Deployment status
+      run: |
+        echo "🚀 Deployment completed!"
+        echo "📱 Your site is live at: ${{ steps.deployment.outputs.page_url }}"
