Fix GitHub Actions workflows: handle no tests gracefully and delete gh-pages branch

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
       run: npm ci
       
     - name: Run tests (if available)
-      run: npm test --if-present
+      run: npm test --if-present --passWithNoTests
       
     - name: Build application
       run: npm run build
