--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -22,6 +22,9 @@ jobs:
     - name: Install dependencies
       run: npm ci
       
+    - name: Run tests (if available)
+      run: npm test --if-present --passWithNoTests
+      
     - name: Build application
       run: npm run build
       
